# Clarity-AI-Backend

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .safety-policy.yml  .safety-project.ini  .taskmasterconfig  .vale.ini  AGENT_GUIDANCE_STRUCTURAL_FIXES.md  API.md  API_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_AND_COMPLIANCE.md  AUDIT_SUMMARY.md  BIOMETRIC_ALERTS_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  CURRENT_PROBLEM.md  DATABASE.MD  DEVELOPMENT_ROADMAP.md  DOMAIN_REFACTOR.MD  Dockerfile  ENRYPTION.md  FASTAPI.MD  IMMEDIATE_PROBLEMS.md  MVP.md  MYPY_ERRORS.md  Makefile  NEXT_PROMPT.md  ONBOARDING_CHECKLIST.md  PATIENTCRUD.MD  PHI_REFACTOR.md  PROJECT_STRUCTURE_INSIGHTS.md  QUICK_WINS_IMPLEMENTATION.md  README.md  SECURITY.md  SERVICE_IMPLEMENTATION_GUIDE.md  SPARC.md  SPARC_AND_TOOLS.md  TECHNICAL_COFOUNDER_AUDIT_SUMMARY.md  (+46 more)
.vale/Clarity/: HIPAA.yml  Hedging.yml  PassiveVoice.yml  Terminology.yml  UnsubstantiatedClaims.yml
alembic/: __init__.py  env.py
api-audit/: API_STRUCTURE_ANALYSIS.md  DEPENDENCY_MANAGEMENT.md  MISSING_ROUTES.md  STANDARDIZATION_PLAN.md
app/: README.md  app_factory.py  factory.py  main.py  test_jwt_service.py
app/api/: __init__.py  aws_init.py
app/config/: settings.py
app/core/: constants.py  database_settings.py  logging_config.py
app/demo/: enhanced_digital_twin_demo.py  run_digital_twin_demo.py
app/domain/: exceptions.py
app/presentation/: __init__.py
app/tests/: __init__.py  conftest.py  conftest_markers.py  conftest_repositories.py
artifacts/: container-scan.json  dependency-tree.json  license_compliance_analysis.md  licenses_baseline.json  pip_audit_report_baseline.json  safety_report_baseline.json  sbom_baseline.json  uv_compatibility_analysis.md  uv_dependency_modernization.md  uv_performance_validation.md  vulnerability_baseline_analysis.md
audit_exports/: audit_export_20250513_122728.json  audit_export_20250513_123105.json  audit_export_20250513_125020.json  audit_export_20250513_125306.json  audit_export_20250513_125400.json  audit_export_20250513_125656.json  audit_export_20250513_125829.json  audit_export_20250513_125911.json  audit_export_20250513_130025.json  audit_export_20250513_130130.json  audit_export_20250513_130228.json  audit_export_20250513_130301.json  audit_export_20250513_130330.json  audit_export_20250513_130508.json  audit_export_20250513_130724.json  audit_export_20250513_131003.json  audit_export_20250513_131441.json
bootstrap/: __init__.py  sitecustomize_wrapper.py  usercustomize_wrapper.py
deployment/: Dockerfile  deploy-novamind-backend.sh  docker-compose.yml
deployment/environments/: production.env  staging.env
docs/: API_Reference.md  API_Security.md  API_Versioning_Strategy.md  Actigraphy_System.md  Application_Services.md  Audit_Logger_Interface.md  Authentication_System.md  Biometric_Alert_Rules_API.md  CODEBASE_ARCHITECTURE_ANALYSIS.md  CODE_QUALITY_METRICS.md  Clean_Architecture_Principles.md  DEPENDENCY_ANALYSIS_REPORT.md  DEPLOYMENT_READINESS.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_OVERVIEW.md  DOSSIER.md  DTOs_And_Data_Mapping.md  Database_Access_Guide.md  Dependency_Injection_Guide.md  Design_Patterns_Guide.md  Development_Guide.md  Digital_Twin_API_Routes.md  Documentation_Checklist.md  Domain_Models_Entities.md  Domain_Service_Interfaces.md  ENCRYPTION.md  Error_Handling_Strategy.md  External_Services_Integration.md  FastAPI_Architecture_Overview.md  FastAPI_Endpoint_Development.md  FastAPI_HIPAA_Compliance.md  FastAPI_Implementation.md  FastAPI_Testing_Guide.md  HIPAA_Compliance.md  IMMEDIATE_PROBLEMS.md  INSTALLATION_GUIDE.md  JWT-FIXES.md  LINTING_GUIDE.md  MIDDLEWARE_REFACTOR.md  MIDDLEWARE_REFACTOR_COMPLETED.md  (+26 more)
docs/LEGACY/: .markdownlint.json  00_Documentation_Index.md  01_Overview.md  02_Executive_Summary.md  11_API_Architecture.md  12_Security_Architecture.md  20_Security_and_Compliance.md  30_Domain_Model.md  35_Digital_Twin.md  40_Database_Management.md  50_API_Guidelines.md  60_Implementation.md  65_ML_Integration.md  70_Security_Compliance.md  DATABASE.MD  DEEP_RESEARCH.MD  INTEGRATION_TEST_REFACTOR.md  MIDDLEWARE_REFACTOR_COMPLETED.md  ML.mmd  PATIENTCRUD.MD  asyncio_fixes.md  cross_database_uuid_compatibility.md  standalone_test_migration_guide.md  standalone_test_migration_status.md  test_migration_summary.md
docs/architecture/: cross_database_uuid_compatibility.md
docs/archive/: DOCUMENTATION_OVERVIEW_OLD.md  Project_Structure_OLD.md  migration_plan.md
docs/audit/: DOCUMENTATION_AUDIT_SUMMARY.md  README_audit.md  codebase_structure_analysis.md  documentation_inventory.md  documentation_tooling_analysis.md  link_analysis.md
docs/content/: index.md
docs/current/: 00_Documentation_Structure.md  10_Architecture.md  13_Deployment_Architecture.md  30_Configuration_Management.md  36_Digital_Twin_Data_Model.md  37_Digital_Twin_API.md  40_Data_Pipeline.md  70_Infrastructure.md  80_Testing_Guide.md  README.md
docs/deep_research/: more_literature.md
docs/problems/: user_model_redundancy copy.md  user_model_redundancy.md
docs/templates/: API_ENDPOINT_TEMPLATE.md  ARCHITECTURE_COMPONENT_TEMPLATE.md  DOMAIN_ENTITY_TEMPLATE.md  README_TEMPLATE.md
docs/testing/: README.md  test_migration_status.md
migration_analysis/: candidate_tests.txt  duplicate_tests.txt
scripts/: LINTING_README.md  QUANTUM_TEST.sh  README.md  SINGULARITY.sh  TRANSCENDENCE.sh  __init__.py  demo_tools.py  fix_linting_issues.py  fix_mypy_issues.py  fix_pytest_asyncio_imports.py  health_check.py  lint_markdown.sh  lint_prose.sh  linting_strategy.py  locustfile.py  migrate_biometric_tests.sh  migrate_digital_twin_tests.sh  migrate_pat_tests.sh  migrate_standalone_tests.sh  migrate_to_modern_asyncio.py  prd.txt  preflight_check.py  reorganize_tests.py  run_tests.sh  simple_health.py  verify_audit_readiness.py  verify_types.py
scripts/archive/: aws_migration.py  di_probe.py  remove_all_standalone_tests.sh  run_all_migrations.sh  test_di_override.py
scripts/db/: fix_db_driver.py  (+1 more)
tools/: README.md  __init__.py  clarity.py  migrate_refactored.py
(+1142 files in other folders)
